Ran Source > Clean Up and Source > Format
Major clean-ups roughly in decreasing frequency include:
- Remove of hard tabs.
- Reduce indentation (change else to guard clause).
- Remove variable assignment before return. Unfortunately, this
  clobbered @SuppressWarnings("unchecked") statements in the crud
  classes. These were restored manually. Fortunately, it eliminated
  many of Todd’s horrible and meaningless variables called "result."
- Use Objects.equals() in the equals method implementation and Use
  Objects.hash(). This may mean we will never have to rebuild equals and
  hashCode with Eclipse again.
- Use String.replace() instead of String.replaceAll() when possible.
  Avoids the use of unnecessary regular expression processing.
- Primitive type rather then wrapper class. For example, parseDouble
  returns double whereas valueOf returns Double. If you need a double,
  use the former and avoid the unboxing.
- Simplify lambda expression and method reference syntax. For example,
  ".filter(s -> s.visibleParameterSet())" to
  ".filter(ParameterSet::visibleParameterSet)". This also cleaned up
  the Swing event handlers nicely.
- Create array with curly.
- Use Comparator.comparing(). This is nice. Compare
  "(f1, f2) -> f1.getName().compareTo(f2.getName())" to
  "Comparator.comparing(File::getName)".
- Convert StringBuffer to StringBuilder for local variables and
  Replace String concatenation by StringBuilder.

Perform a few additional manual clean-ups including:
- Reduce Eclipse warnings from 59 to 24 leaving only deprecated warning.
- Delete unused class ProcessIndicator.
- Undo removal of unused parameters in InstanceMetricsReport since the
  method’s code was commented out. Comment out the method and the
  calls instead.
- Remove a long string of nulls at the end of several files.